--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "firebase": "^11.0.2",
     "flowbite": "^2.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
     "react-toastify": "^10.0.6",
-    "reactstrap": "^9.2.3"
+    "reactstrap": "^9.2.3",
+    "tw-elements": "^2.0.0",
+    "tw-elements-react": "1.0.0-alpha-end"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
