--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^10.0.6",
     "reactstrap": "^9.2.3",
     "tw-elements": "^2.0.0",
