--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "bootstrap": "^5.3.3",
     "firebase": "^11.0.2",
     "flowbite": "^2.5.2",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
+    "react-quilljs": "^2.0.4",
     "react-router-dom": "^7.0.1",
     "react-spinners": "^0.15.0",
     "react-toastify": "^10.0.6",
