--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^2.2.0",
+    "@mui/material": "^6.2.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "firebase": "^11.0.2",
     "flowbite": "^2.5.2",
-    "quill": "^2.0.3",
+    "material-ui-confirm": "^3.0.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
-    "react-quilljs": "^2.0.4",
     "react-router-dom": "^7.0.1",
+    "react-simple-wysiwyg": "^3.2.0",
     "react-spinners": "^0.15.0",
     "react-toastify": "^10.0.6",
     "reactstrap": "^9.2.3",
